@@ -5,6 +5,7 @@
 
 COM_PODCASTMANAGER="Podcast Manager"
 COM_PODCASTMANAGER_DEFAULT_PAGE_TITLE="Podcast Feed"
+COM_PODCASTMANAGER_ERROR_FINDING_FILE="Could not locate the file %s on the file system, skipping feed item"
 COM_PODCASTMANAGER_FEED_DATA="Feed Data"
 COM_PODCASTMANAGER_FEED_FIELD_COPYRIGHT_DESCRIPTION="The copyright of the podcast."
 COM_PODCASTMANAGER_FEED_FIELD_COPYRIGHT_LABEL="Copyright"
