@@ -4,5 +4,6 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 PLG_CONTENT_PODCASTMANAGER="Content - Podcast Manger"
+PLG_CONTENT_PODCASTMANAGER_ERROR_NO_FILEPATH="Could not render the media player, no file path available"
 PLG_CONTENT_PODCASTMANAGER_ERROR_PULLING_DATABASE="Could not get the information for the podcast %s from the database."
 PLG_CONTENT_PODCASTMANAGER_XML_DESCRIPTION="The Podcast Manager plugin turns {podcast Title} tags into players and links"
