@@ -1,3 +1,7 @@
+28-August-2011 Michael Babker
++ Add JLog logging to the content plugin and RSS feed
+~ If feed language is *, set the tag to the site language
+
 23-August-2011 Michael Babker
 # Fix count method on feeds model
 
